# m36-auth

./: LICENSE  README.md  m36-auth.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Lib/: Prelude.hs
